task-1-secure-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ledger-api
  namespace: payments
  labels:
    app: ledger-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ledger-api

  template:
    metadata:
      labels:
        app: ledger-api

    spec:
      serviceAccountName: ledger-api-sa

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001

      containers:
      - name: ledger-api
        image: ledger-api:v1
        imagePullPolicy: Never

        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false

          capabilities:
            drop:
              - ALL

          seccompProfile:
            type: RuntimeDefault

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "250m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
           path: /health
           port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
           path: /health
           port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
