task-1-secure-kubernetes/neighbour.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  namespace: payments
  labels:
    app: reporting

spec:
  replicas: 1

  selector:
    matchLabels:
      app: reporting

  template:
    metadata:
      labels:
        app: reporting

    spec:
      serviceAccountName: reporting-sa

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001

      containers:
      - name: reporting
        image: curlimages/curl:8.8.0
        command: ["sleep", "infinity"]

        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true

          capabilities:
            drop:
              - ALL

          seccompProfile:
            type: RuntimeDefault

        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"

          limits:
            cpu: "100m"
            memory: "128Mi"
