task-1-secure-kubernetes/reporting-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: reporting-service
  namespace: payments

spec:
  selector:
    app: reporting

  ports:
  - port: 80
    targetPort: 8080

  type: ClusterIP
